--- a/views/editClient.ejs
+++ b/views/editClient.ejs
@@ -21,27 +21,27 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
                   <h3>Datos del cliente</h3>
-                    <form action="/UpdateClient" method="post" class="needs-validation position-relative" novalidate>
+                    <form action="/UpdateClient" method="post" class="needs-validation" novalidate>
                       <div class="mb-2">
                         <label for="Nombre" class="form-label">Nombres</label>
                         <input type="text" class="form-control" id="Id_cl" name="Id_cl" value="<%= cliente.Id_Persona %>" hidden>
                         <input type="text" class="form-control" id="Nombre" name="Nombre_cl" value="<%= cliente.Nombre %>" required>
-                        <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Nombre</div>
+                        <div class="invalid-feedback">Es necesario el Nombre</div>
                       </div>
                       <div class="mb-2">
                         <label for="Apellido" class="form-label">Apellidos</label>
                         <input type="text" class="form-control" id="Apellido" name="Apellido_cl" value="<%= cliente.Apellido %>" required>
-                        <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Apellido</div>
+                        <div class="invalid-feedback">Es necesario el Apellido</div>
                       </div>
                       <div class="mb-2">
                           <label for="Telefono" class="form-label">Telefono</label>
                           <input type="number" class="form-control" id="Telefono" name="Telefono_cl" value="<%= cliente.Telefono %>" required>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Número teléfonico</div>
+                          <div class="invalid-feedback">Es necesario el Número teléfonico</div>
                         </div>
                         <div class="mb-2">
                           <label for="Cedula" class="form-label">Cedula</label>
                           <input type="text" class="form-control" id="Cedula" name="Cedula_cl" value="<%= cliente.Cedula %>" required>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de cédula</div>
+                          <div class="invalid-feedback">Es necesario el número de cédula</div>
                         </div>
                         <div class="mb-1">
                           <label for="Distrito_cl" class="form-label">Dirección</label>
@@ -76,18 +76,18 @@
                               <option value="VII" selected>Distrito VII</option>
                             <% } else { %> <option value="VII">Distrito VII</option> <% } %>  
                           </select>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Distrito</div>
+                          <div class="invalid-feedback">Es necesario el Distrito</div>
                         </div>
                         
                         <div class="mb-2 dx-2">
                           <label for="Residencia" class="form-label">Zona de Residencia</label>
                           <input type="text" class="form-control" id="Residencia" name="Residencia_cl" value="<%= cliente.Zona_Residencia %>" required>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario la zona de residencia</div>
+                          <div class="invalid-feedback">Es necesario la zona de residencia</div>
                         </div>
                         <div class="mb-2">
                           <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
                           <input type="text" class="form-control" id="PuntoReferencia" name="PuntoReferencia_cl" value="<%= cliente.Punto_Referencia %>" required>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el punto de referencia</div>
+                          <div class="invalid-feedback">Es necesario el punto de referencia</div>
                         </div>
                         <div class="mb-2">
                           <label for="Distancia" class="form-label">Distancia</label>
@@ -96,7 +96,7 @@
                         <div class="mb-2">
                           <label for="Casa" class="form-label">Numero de casa</label>
                           <input type="text" class="form-control" id="Casa" name="Casa_cl" value="<%= cliente.Casa %>" required>
-                          <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de Casa</div>
+                          <div class="invalid-feedback">Es necesario el número de Casa</div>
                         </div>
                         <div class="d-grid gap-2 mb-5">
                           <button type="submit" class="btn btn-success" title="Editar">Editar</button>
@@ -134,6 +134,7 @@
 
 
     <script src="/resources/js/script.js"></script>
+    <script src="/resources/js/scriptClient.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
