--- a/views/editVendedor.ejs
+++ b/views/editVendedor.ejs
@@ -21,27 +21,27 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h2>Datos del Vendedor</h2>
-            <form action="/UpdateVendedor" method="post" class="needs-validation position-relative" novalidate>
+            <form action="/UpdateVendedor" method="post" class="needs-validation" novalidate>
                 <div class="mb-2">
                   <label for="nombre" class="form-label">Nombres</label>
                   <input type="text" class="form-control" id="Id_cl" name="Id_vd" value="<%= vendedor.Id_Persona %>" hidden>
                   <input type="text" class="form-control" id="nombre" name="Nombre_vd" value="<%= vendedor.Nombre %>" required>
-                  <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Nombre</div>
+                  <div class="invalid-feedback">Es necesario el Nombre</div>
                 </div>
                 <div class="mb-2">
                   <label for="apellido" class="form-label">Apellidos</label>
                   <input type="text" class="form-control" id="apellido" name="Apellido_vd" value="<%= vendedor.Apellido %>" required>
-                  <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número Apellido</div>
+                  <div class="invalid-feedback">Es necesario el número Apellido</div>
                 </div>
                 <div class="mb-2">
                     <label for="Telefono" class="form-label">Telefono</label>
                     <input type="number" class="form-control" id="Telefono" name="Telefono_vd" value="<%= vendedor.Telefono %>" required>
-                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número teléfonico</div>
+                    <div class="invalid-feedback">Es necesario el número teléfonico</div>
                   </div>
                   <div class="mb-2">
                     <label for="Cedula" class="form-label">Cedula</label>
                     <input type="text" class="form-control" id="Cedula" name="Cedula_vd" value="<%= vendedor.Cedula %>" required>
-                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de cédula</div>
+                    <div class="invalid-feedback">Es necesario el número de cédula</div>
                   </div>
                   <div class="mb-1">
                     <label for="Residencia" class="form-label">Dirección</label>
@@ -76,13 +76,13 @@
                         <option value="VII" selected>Distrito VII</option>
                       <% } else { %> <option value="VII">Distrito VII</option> <% } %>  
                     </select>
-                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el Distrito</div>
+                    <div class="invalid-feedback">Es necesario el Distrito</div>
                   </div>
                   
                   <div class="mb-2 dx-2">
                     <label for="Residencia" class="form-label">Zona de Residencia</label>
                     <input type="text" class="form-control" id="Residencia" name="Residencia_vd" value="<%= vendedor.Zona_Residencia %>" placeholder="Z. Residencia" required>
-                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario la zona de residencia</div>
+                    <div class="invalid-feedback">Es necesario la zona de residencia</div>
                   </div>
                   <div class="mb-2">
                     <label for="PuntoReferencia" class="form-label">Punto de Referencia</label>
@@ -95,7 +95,7 @@
                   <div class="mb-2">
                     <label for="casa" class="form-label">Numero de casa</label>
                     <input type="text" class="form-control" id="casa"  name="Casa_vd" placeholder="N. Casa" value="<%= vendedor.Casa %>"  required>
-                    <div class="invalid-tooltip position-absolute top-0 end-0 translate-end">Es necesario el número de Casa</div>
+                    <div class="invalid-feedback">Es necesario el número de Casa</div>
                   </div>
                   <div class="d-grid gap-2 mb-3">
                     <button type="submit" class="btn btn-success" title="Editar">Editar</button>
