Comith Abonos y record crediticio Kenneth

--- a/views/abonos.ejs
+++ b/views/abonos.ejs
@@ -150,7 +150,7 @@
             <nav class="navbar bg-body-tertiary">
             </nav>
             <div style="max-height: 300px; overflow-y: auto">
-              <table class="table primary">
+              <table class="table primary" id="Tabla_Historial_Abonos">
                 <thead>
                   <tr>
                     <th class="centrado">Nombre del cliente</th>
@@ -161,13 +161,6 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td class="centrado">Cliente B</td>
-                    <td class="centrado">Vendedor Y</td>
-                    <td class="centrado">2024-04-15</td>
-                    <td class="centrado">$200.00</td>
-                    <td class="centrado">$300.00</td>
-                  </tr>
                 </tbody>
               </table>
             </div>
