--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -52,14 +52,14 @@
           <span class="tooltip">Producto</span>
         </li>
         <li>
-          <a href="ventas">
+          <a href="/ventas">
             <i class="bx bx-credit-card"></i>
             <span class="links_name">Ventas</span>
           </a>
           <span class="tooltip">Ventas</span>
         </li>
         <li>
-          <a href="abonos">
+          <a href="/abonos">
             <i class="bx bx-money"></i>
             <span class="links_name">Abonos</span>
           </a>
