--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
