--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -12,6 +12,14 @@
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"rel="stylesheet"/>
     <!--Estilo CSS-->
     <link rel="stylesheet" href="resources/css/style.css" />
+
+    
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+	  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap5.min.css">
+
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
@@ -246,7 +254,7 @@
             </div>
             
 
-            <nav class="navbar bg-body-tertiary">
+            <!-- <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
                 <a class="navbar-brand">Buscar vendedor</a>
                 <form class="d-flex" role="search">
@@ -254,8 +262,8 @@
                   <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
               </div>
-            </nav>
-            <table class="table primary">
+            </nav> -->
+            <table class="table primary hover" id="TableVendedor">
                 <thead>
                   <tr>
                     <th class="centrado">Nombre completo</th>
@@ -301,6 +309,13 @@
     <script src="/resources/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
  
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js"></script>      
+
+
+
+
     <!-- codigo js para las validaciones-->
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -340,6 +355,20 @@
           })
       </script>
   <% } %>
+
+  <script>
+    $(document).ready(function(){
+        $('#TableVendedor').DataTable({
+          info: false,
+          ordering: false,
+          paging: false,
+          "oLanguage": {
+            "sSearch": "Buscar a un Cliente:"
+            }
+        })
+        ;
+    });
+</script>
 
   </body>
 </html>
