--- a/views/editVendedor.ejs
+++ b/views/editVendedor.ejs
@@ -12,6 +12,7 @@
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"rel="stylesheet"/>
     <!--Estilo CSS-->
     <link rel="stylesheet" href="resources/css/style.css" />
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
