--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
 </head>
 <body>
     <div class="container-login">
