--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/style.css">
     <title>Register</title>
+    <link rel="shortcut icon" href="/resources/images/favicon.ico">
 </head>
 <body>
     <div class="register-form">
