--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/resources/css/style.css" />
+
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+	  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.css">
+
   </head>
   <body>
     <%- include('sidebar.ejs') %>
@@ -109,23 +114,23 @@
           <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
             
             <% if ( Categoria == 'Calzado') { %>
-              <h2><b>Listado de Calzado</b></h2>
+              <h2 class="mb-3"><b>Listado de Calzado</b></h2>
             <% } else if ( Categoria == 'Prendas_Vestir') { %>
-              <h2><b>Listado de Prendas de Vestir</b></h2>
+              <h2 class="mb-3"><b>Listado de Prendas de Vestir</b></h2>
             <% } else if ( Categoria == 'Cosmeticos') { %>
-              <h2><b>Listado de Cosmeticos</b></h2>
+              <h2 class="mb-3"><b>Listado de Cosmeticos</b></h2>
             <% } else if ( Categoria == 'Electrodomesticos') { %>
-                <h2><b>Listado de Electrodomesticos</b></h2>
+                <h2 class="mb-3"><b>Listado de Electrodomesticos</b></h2>
             <% } else if ( Categoria == 'Productos_Plasticos') { %>
-                <h2><b>Listado de Productos Plasticos</b></h2>
+                <h2 class="mb-3"><b>Listado de Productos Plasticos</b></h2>
             <% } else if ( Categoria == 'Prendas de Vestir') { %>
-                <h2><b>Listado de Prendas de Vestir</b></h2>
+                <h2 class="mb-3"><b>Listado de Prendas de Vestir</b></h2>
             <% } else if ( Categoria == 'Productos Plasticos') { %>
-                  <h2><b>Listado de Productos Plasticos</b></h2>
+                  <h2 class="mb-3"><b>Listado de Productos Plasticos</b></h2>
             <% } %>
 
-
-            <table class="table primary">
+              
+            <table class="table primary hover" id="TableProducts">
               <thead>
                 <tr>
                   <th class="centrado">Producto</th>
@@ -135,43 +140,40 @@
                   <th class="centrado">Acciones</th>
                 </tr>
               </thead>
-
-
-                    <% Producto.forEach((product) => { %>
-                        <tbody>
-                            <tr>
-                            <td class="centrado"><%= product.Descripcion %></td>
-                            <td class="centrado">C$ <%= product.Precio %></td>
-                            <td class="centrado"><%= product.Existencia %> unidades</td>
-                            <td class="centrado"><%= product.Fecha_Ingreso %></td>
-
-                            <td>
-                                <!-- Botones de acciones -->
-                                <a href="/EditProduct/<%= product.Categoria %>/p/<%= product.Id_Producto %>" class="btn btn-success mb-1" title="Actualizar">
-                                  <svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="16"
-                                    height="16"
-                                    fill="currentColor"
-                                    class="bi bi-pencil-square"
-                                    viewBox="0 0 16 16">
-                                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                    <path
-                                    fill-rule="evenodd"
-                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
-                                    /></svg>
-                                </a>
-                                <a href="#" class="btn btn-danger" title="Eliminar Producto" onclick="confirmDelete('<%= product.Id_Producto %>', '<%= Categoria %>')">
-                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"class="bi bi-trash" viewBox="0 0 16 16">
-                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                                    <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                                  </svg>
-                                </a>
-                            </td>
-                            </tr>
-                        </tbody>
-                    <% }) %> 
-
+              
+              <tbody>
+                <% Producto.forEach((product) => { %>
+                  <tr>
+                    <td class="centrado"><%= product.Descripcion %></td>
+                    <td class="centrado">C$ <%= product.Precio %></td>
+                    <td class="centrado"><%= product.Existencia %> unidades</td>
+                    <td class="centrado"><%= product.Fecha_Ingreso %></td>
+                    <td>
+                      <!-- Botones de acciones -->
+                      <a href="/EditProduct/<%= product.Categoria %>/p/<%= product.Id_Producto %>" class="btn btn-success mb-1" title="Actualizar">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="16"
+                                      height="16"
+                                      fill="currentColor"
+                                      class="bi bi-pencil-square"
+                                      viewBox="0 0 16 16">
+                                      <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                      <path
+                                      fill-rule="evenodd"
+                                      d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
+                                      /></svg>
+                      </a>
+                      <a href="#" class="btn btn-danger" title="Eliminar Producto" onclick="confirmDelete('<%= product.Id_Producto %>', '<%= Categoria %>')">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"class="bi bi-trash" viewBox="0 0 16 16">
+                                      <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                      <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                    </svg>
+                      </a>
+                    </td>
+                  </tr>
+                <% }) %> 
+              </tbody>
             </table>
           </div>
         </div>
@@ -181,6 +183,11 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/resources/js/script.js"></script>
     <script src="/resources/js/ScriptProducts.js"></script>
+
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js"></script>      
+
 
     <% if (typeof alert != "undefined") { %>
     <script>
@@ -195,6 +202,29 @@
       });
     </script>
     <% } %>
+
+    <script>
+      $(document).ready(function(){
+          $('#TableProducts').DataTable({
+            info: false,
+            ordering: false,
+            lengthMenu: [5,10,15,20,25,50],
+            "oLanguage": {
+              "sSearch": "Buscar un producto:",
+              "sZeroRecords": "No se encontraron resultados",
+              "sLengthMenu": "Mostrar _MENU_ Productos",
+              "sZeroRecords": "No se encontraron resultados",
+              "sLoadingRecords": "Cargando...",
+              "oPaginate": {
+                  "sFirst": "Primero",
+                  "sLast": "Último",
+                  "sNext": "Siguiente",
+                  "sPrevious": "Anterior"}
+              }
+          })
+          ;
+      });
+    </script>
 
   </body>
 </html>
